feat(file): file convert
