# docs/swagger.json
@@ -301,6 +301,62 @@
                 }
             }
         },
+        "/convert_html_to_docx": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "项目管理的第二页"
+                ],
+                "summary": "上传html文件，转换为docx文件 url前缀为 api/v1/temp/xxxx.docx",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "htmlfile",
+                        "name": "htmlfile",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ConvertHtmlToPdfA"
+                        }
+                    }
+                }
+            }
+        },
+        "/convert_html_to_pdf": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "项目管理的第二页"
+                ],
+                "summary": "上传html文件，转换为pdf文件 url前缀为 api/v1/temp/xxxx.pdf",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "htmlfile",
+                        "name": "htmlfile",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ConvertHtmlToPdfA"
+                        }
+                    }
+                }
+            }
+        },
         "/doc/create_doc_file": {
             "post": {
                 "consumes": [
@@ -1707,7 +1763,7 @@
                 "tags": [
                     "项目管理的第二页"
                 ],
-                "summary": "上传图片",
+                "summary": "上传图片 前缀为/media/images/xxxx",
                 "parameters": [
                     {
                         "type": "file",
@@ -1963,7 +2019,7 @@
                 "tags": [
                     "用户模块"
                 ],
-                "summary": "上传头像",
+                "summary": "上传头像 前缀为/media/avatars/xxx",
                 "parameters": [
                     {
                         "type": "file",
@@ -2298,6 +2354,39 @@
                 }
             }
         },
+        "response.CloseSharedPPageA": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "response.CloseSharedPPageQ": {
+            "type": "object",
+            "properties": {
+                "ppage_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "response.ConvertHtmlToPdfA": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "response.CopyProjA": {
             "type": "object",
             "properties": {
@@ -2522,25 +2611,6 @@
                 }
             }
         },
-        "response.CloseSharedPPageA": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "response.CloseSharedPPageQ": {
-            "type": "object",
-            "properties": {
-                "ppage_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "response.DeleteDocumentA": {
             "type": "object",
             "properties": {
@@ -2656,6 +2726,28 @@
             ],
             "properties": {
                 "document_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "response.GenSharedPPageTokenA": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.GenSharedPPageTokenQ": {
+            "type": "object",
+            "properties": {
+                "ppage_id": {
                     "type": "integer"
                 }
             }
@@ -3461,28 +3553,6 @@
             ],
             "properties": {
                 "document_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "response.GenSharedPPageTokenA": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
-                },
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.GenSharedPPageTokenQ": {
-            "type": "object",
-            "properties": {
-                "ppage_id": {
                     "type": "integer"
                 }
             }
